--- a/Profile/css/my_portfolio.css
+++ b/Profile/css/my_portfolio.css
@@ -3,6 +3,7 @@
  * Order: 2 (index, portfolio, contact form)
  * Auth: Peter Santiago
  * Last Updated: 09.18.2018
+ * Last Updated: 09.04.2023 wow.. yeah 5 years later :/
  **/
 
  /* image table parameters */
